namespace Applied;

public interface IBookContentProvider
{
    string GetContent();
}