namespace Applied;

public class MathBookContentProvider : IBookContentProvider
{
    public string GetContent()
    {
        return "Math book content: Algebra, Geometry, Calculus";
    }
}